--- a/parte2/Práctica Parte II.Rmd
+++ b/parte2/Práctica Parte II.Rmd
@@ -15,7 +15,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 **Introducción**
 
-En este trabajo se va a realizar un análisis de un dataset que contiene información sobre conexiones de red. El objetivo es identificar si una conexión es benigna o maligna, es decir, si es un keylogger o no. Para ello, se utilizarán distintos algoritmos de machine learning y se compararán los resultados obtenidos. El cuaderno se dividirá en las siguientes secciones:
+En este trabajo se va a realizar un análisis de un dataset que contiene información sobre conexiones de red. El objetivo es identificar si una conexión es benigna o maligna, es decir, si se trata de un keylogger o no. Para ello, se utilizarán distintos algoritmos de machine learning y se compararán los resultados obtenidos. El cuaderno se dividirá en las siguientes secciones:
 
 1. [Exploración del dataset y agrupación de variables](#agrupacion)
 2. [Preprocesamiento de los datos](#preprocesamiento)
@@ -63,9 +63,9 @@ str(mydf)
 _Aquí debemos agrupar las variables por grupos._
 
 # Preprocesamiento de los datos. {#preprocesamiento}
-Antes de empezar con los análisis se deben preprocesar los datos. En este sección se explicarán los preprocesamientos realizados y sus razonamientos.
+Antes de empezar con los análisis se deben preprocesar los datos. En esta sección se explicarán los preprocesamientos realizados y sus razonamientos.
 
-Lo primero de todo es visualzar el dataset completo con todas sus variables:
+Lo primero de todo es visualizar el dataset completo con todas sus variables:
 ```{r}
 # Mostramos el dataset completo
 dfSummary(mydf)
@@ -117,13 +117,13 @@ Ahora, eliminamos las filas duplicadas.
 mydf <- mydf[!duplicated(mydf), ]
 ```
 
-Vamos a eliminar las columnas con desviación estándar cero. Para ello, psaremos a numérico todas las variables que no sean claramente carácteres.
+Vamos a eliminar las columnas con desviación estándar cero. Para ello, psaremos a numérico todas las variables que no sean claramente caracteres.
 ```{r, eval = FALSE}
 # Pasamos a numérico las variables que les corresponde
 mydf$Packet.Length.Std <- as.numeric(mydf$Packet.Length.Std)
 ```
 
-Al analizar las variables vemos que hay una con una situación particular. Esta es "CWE.Flag.Count", que tiene valores "0" y "0.0". Además, los valores "0.0" no son pocos, suponen el 6% del total, más que los valores "1" de otros Flags como "FIN.Flag.Count", que solo el 1.7% son valores 1. Esto puede deberse a que por un error los valores 0.0 deberían ser 1. Si fuera un error de tipografía que pasará algunos valores 0 a 0.0 no habría tantos casos. Por lo tanto, se convertirán los valores "0.0" a "1" para que siga el formato común con los otros Flags.
+Al analizar las variables vemos que hay una con una situación particular. Se trata de "CWE.Flag.Count", que tiene valores "0" y "0.0". Además, los valores "0.0" no son pocos, suponen el 6% del total, más que los valores "1" de otros Flags como "FIN.Flag.Count", donde solo el 1.7% son valores 1. Esto puede deberse a que, por un error, los valores 0.0 deberían ser 1. Si fuera un error de tipografía que pasará algunos valores 0 a 0.0 no habría tantos casos. Por lo tanto, se convertirán los valores "0.0" a "1" para que sigan el formato común con los otros Flags.
 
 ```{r, eval = FALSE}
 # Convertimos los "0.0" a 1
@@ -161,7 +161,7 @@ Guardamos el dataset procesado.
 write.csv(mydf, "Keylogger_Detection_processed.csv", row.names = FALSE)
 ```
 
-Para ver que el dataset procesado sirve para trabajar, vamos a comparar el porcentaje de valores positivos y negativos en los dos dasatet.
+Para ver que el dataset procesado sirve para trabajar, vamos a comparar el porcentaje de valores positivos y negativos en los dos datasets.
 ```{r}
 # Cargamos el dataset procesado
 mydf <- read.csv("Keylogger_Detection_processed.csv", header = TRUE, sep = ",")
@@ -187,7 +187,7 @@ table(mydf$Class) / nrow(mydf) * 100
 Vemos que la proporción de casos positivos y negativos no cambia. Por lo tanto, el dataset procesado sirve para trabajar. 
 
 # Sampleo de los datos. {#sampleo}
-Para poder trabajar con holgura a lo largo de la práctica vamos a coger una muestra del dataset original del 20%. De esta forma, los tiempos de ejecución serán menores y podremos trabajar más rápido. Para poder trabajar con el dataset sampleado, tendremos que conseguir que la proporción de casos positivos y negativos sea la misma que en el dataset original. Para ello, se cogerán filas aleatoriamente sin reemplazo y con una probabilidad uniforme. 
+Para poder trabajar con holgura a lo largo de la práctica, vamos a coger una muestra del dataset original del 20%. De esta forma, los tiempos de ejecución serán menores y podremos trabajar más rápido. Para poder trabajar con el dataset sampleado, tendremos que conseguir que la proporción de casos positivos y negativos sea la misma que en el dataset original. Para ello, se cogerán filas aleatoriamente sin reemplazo y con una probabilidad uniforme. 
 
 ```{r}
 # Sampleamos el dataset
@@ -200,7 +200,7 @@ table(mydf.sample$Class) / nrow(mydf.sample) * 100
 table(mydf.original$Class) / nrow(mydf.original) * 100
 ```
 
-Vemos que la proporción de casos positivos y negativos en el dataset sampleado es casi idéntica a la del dataset original. Por lo tanto, el dataset sampleado sirve para trabajar. Vamos a guardar el dataset sampleado.
+Vemos que la proporción de casos positivos y negativos en el dataset sampleado es casi idéntica a la del dataset original. Por lo tanto, el dataset sampleado sirve para trabajar. Vamos a guardar dicho dataset sampleado.
 ```{r, eval = FALSE}
 # Guardamos el dataset sampleado
 write.csv(mydf.sample, "sampled.csv", row.names = FALSE)
@@ -233,13 +233,13 @@ mydf$Class <- relevel(mydf$Class, ref = "Benign")
 
 ## Análisis del PCA
 
-Vamos a realizar el PCA con el conjunto preprocesado. Primero, seleccionamos las colunas numéricas.
+Vamos a realizar el PCA con el conjunto preprocesado. Primero, seleccionamos las columnas numéricas.
 ```{r}
 # Seleccionamos las columnas numéricas
 mydf.numeric <- mydf[, sapply(mydf, is.numeric)]
 ```
 
-Una vez tenemos las columnas numéricas seleccionadas, realizamos el PCA. No hace falta estandarizar las variales previamente ya que el PCA lo hace por nosotros con el parámetro `scale = TRUE`.
+Una vez tenemos las columnas numéricas seleccionadas, realizamos el PCA. No hace falta estandarizar las variables previamente ya que el PCA lo hace por nosotros con el parámetro `scale = TRUE`.
 ```{r}
 # Realizamos PCA
 pr.out <- prcomp(mydf.numeric, scale = TRUE)
@@ -276,7 +276,7 @@ biplot(pr.out, scale = 0, xlim = c(-15, 15), ylim = c(-15, 15))
 dev.off()
 ```
 
-Como el dataset tiene demasiadas varaibles, el biplot se guarda en un .png para poder consultarse cuando se desee [biplot.png](biplot.png). Se puede ver en esta imagen que tenemos demasiados predictores y demasiados valores, no se puede sacar nada en claro. Además, como PC1 y PC2 explican solo el 35.73% de la varianza el biplot tampoco sería representativo.
+Como el dataset tiene demasiadas variables, el biplot se guarda en un .png para poder consultarse cuando se desee [biplot.png](biplot.png). Se puede ver en esta imagen que tenemos demasiados predictores y demasiados valores, no se puede sacar nada en claro. Además, como PC1 y PC2 explican solo el 35.73% de la varianza el biplot tampoco sería representativo.
 
 Por todo esto, podemos ver que la elaboración de un modelo de clasificación que identifique conexiones de keystrokes va a ser un problema complicado. Tenemos muchos predictores y ver las relaciones entre ellos no va a ser una tarea sencilla. Si intentásemos reducir la dimensionalidad del problea con PCA como mucho podríamos reducir a 11 dimensiones, lo cual sigue siendo una gan cantidad de variables.
 
@@ -333,7 +333,7 @@ Con este análisis podemos concluir que el modelo es nefasto prediciendo conexio
 
 
 # Validación cruzada. {#validacion-cruzada}
-A la hora de crear un modelo de machine learning, es importante seleccionar correctamente los hiperparámetros. Para probar combinaciones de diferentes hiperparámetros, crearemos vectores de hiperparámetros $v_i$, de forma que cada vector $v_i$ contenga un valor para cada uno de los $m$ hiperparámetros que queremos probar. Para cada vector de hiperparámetros $v_i$ realizaremos una validación cruzada, de forma que podamos obtener un resultado de precisión y error para cada combinación de hiperparámetros. Luego se usará la regla del One-Standard-Error para seleccionar el hiperparámetro más simple que tenga un rendimiento aceptable.
+A la hora de crear un modelo de machine learning, es importante seleccionar correctamente los hiperparámetros del mismo. Para probar combinaciones de diferentes hiperparámetros, crearemos vectores de hiperparámetros $v_i$, de forma que cada vector $v_i$ contenga un valor para cada uno de los $m$ hiperparámetros que queremos probar. Para cada vector de hiperparámetros $v_i$ realizaremos una validación cruzada, de forma que podamos obtener un resultado de precisión y error para cada combinación de hiperparámetros. Luego se usará la regla del One-Standard-Error para seleccionar el hiperparámetro más simple que tenga un rendimiento aceptable.
 
 Para realizar la validación cruzada se hará lo siguiente:
 
@@ -355,7 +355,7 @@ En esta sección vamos a realizar una clasificación mediante un algoritmo de Ba
 
 El método de Bagging (Bootstrap Aggregating) es un procedimiento utilizado para reducir la varianza de un método de aprendizaje estadístico, siendo particularmente útil en el contexto de árboles de decisión, aunque puede usarse en otros métodos. Bagging implica crear múltiples copias del conjunto de datos de entrenamiento original usando el método Bootstrap, ajustar un árbol de decisión separado a cada copia, y luego combinar todos los árboles para crear un único modelo predictivo. En el caso de la clasificación, que es el que nos interesa, la predicción final se realiza por votación de los árboles individuales.
 
-El Random Forest es un caso particular de Bagging. El modelo de Random Forest introduce una modificación para decorrelacionar los árboles, reduciendo así la varianza cuando se promedian estos árboles. Al igual que en Bagging, Random Forest construye múltiples árboles de decisión sobre muestras de entrenamiento obtenidas mediante Bootstrap. Sin embargo, introduce un paso adicional en la construcción de cada árbol que marca la principal diferencia con el método de Bagging: cuando se construye un árbol de decisión este utiliza solo $m$ predictores, escodigos aleatoriamente de entre los $p$ predictores disponibles.
+El Random Forest es un caso particular de Bagging. El modelo de Random Forest introduce una modificación para decorrelacionar los árboles, reduciendo así la varianza cuando se promedian estos árboles. Al igual que en Bagging, Random Forest construye múltiples árboles de decisión sobre muestras de entrenamiento obtenidas mediante Bootstrap. Sin embargo, introduce un paso adicional en la construcción de cada árbol que marca la principal diferencia con el método de Bagging: cuando se construye un árbol de decisión este utiliza solo $m$ predictores, escogidos aleatoriamente de entre los $p$ predictores disponibles.
 
 Los hiperparámetros que utiliza el modelo Random Forest son los siguientes:
 
@@ -488,6 +488,17 @@ crossvalidation.results
 
 # Red Neuronal. {#red-neuronal}
 
+## Explicación del modelo
+Dado que el número de datos que tenemos disponibles para entrenar el modelo elegido puede considerarse relativamente alto, una buena opción a utilizar es la red neuronal, la cual mejora su rendimiento cuando dispone de muchos datos. Además, tanto la alta dimensionalidad, como la aparente complejidad en las relaciones entre la variable de salida y las de entrada, pueden ser idóneas para un modelo especializado en captar relaciones no lineales, como es el de la red neuronal. En este modelo, son tres los posibles hiperparámetros entre los que elegir, siendo los dos primeros relativos a la propia arquitectura de la red:
 
+- $units$ en la primera capa. Se elegirá entre los valores $units = 16, 32, 1024$. Con más neuronas en la capa, el modelo amplía en complejidad, lo que puede ayudar con la no linealidad de nuestro problema, pero también puede conducir a un sobreajuste, además de que aumenta el tiempo de entrenamiento.
+
+- $units$ en la segunda capa. Los valores posibles son  $units = 0, 16, 32, 1024$. El primer valor indica que esta capa no es incluida directamente en el modelo, por lo que solo se construiría la red con la primera capa definida anteriormente.
+
+- $epochs$. Es el número de veces que, durante el proceso de entrenamiento, la red ha usado el conjunto total de datos disponibles para entrenar. Cuanto mayor es, más permite al modelo ajustarse a dichos datos y minimizar el error de entrenamiento. Sin embargo, esto conlleva un inconveniente, ya que si el modelo se ajusta demasiado, puede ocurrir overfitting y que no generalice bien a los datos de test. Es por ello que resulta necesario controlar el número de épocas como hiperparámetro. Los valores probados serán $epochs = 50, 100, 150, 200$.
+
+Hay otros aspectos de la arquitectura de la red a tener en cuenta. Las funciones de activación que se tendrán en todas las neuronas será la misma: la función $activation = "relu"$, la cual dota de no linealidad al modelo. También, debido a la alta dimensionalidad de nuestro problema, se ha aplicado regularización a la red añadiendole una capa de regularización 'Dropout' de $rate = 0.2$ tras cada capa oculta. Para la capa de salida, se usarán dos neuronas, una por cada clase distinta, con función de activación $activation = "softmax"$, que produce como salida la probabilidad de que un vector de entrada pertenezca a su correspondiente clase.
+
+En cuanto a la función de pérdida, se usa $loss = "categorical_crossentropy"$, ideal para problemas de clasificación categórica, y el optimizador usado sera $optimizer = optimizer_adam()$, el cual maneja el parámetro de tasa de aprendizaje por sí mismo, por lo que no es necesario tratar este último como un hiperparámetro que variar.
 
 # Análisis de resultados. {#analisis-resultados}
